Follow up bug 1414406 - Remove the inline options feature for add-ons. Make Tabmix Options button visible in about:addons, open the options the dialog window instead of tab

--- a/addon/chrome/skin/preferences.css
+++ b/addon/chrome/skin/preferences.css
@@ -234,6 +234,10 @@ prefpane > tabbox {
   height: 464px;
 }
 
+prefwindow[in-tab] .paneSelector {
+  width: 530px;
+}
+
 tabbox {
   -moz-box-flex: 1;
   padding: 0 1px;
